name:           refl-club
version:        0.0.1.0
description:    Personal website
homepage:       https://github.com/jsoo1/refl.club#readme
bug-reports:    https://github.com/jsoo1/refl.club/issues
author:         John Soo <jsoo1@asu.edu>
copyright:      2018 John Soo
license:        GPL-3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/jsoo1/refl.club

library
  other-modules: Paths_refl_club
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: About
                 , Club
                 , Club.Html
                 , Post
                 , Posts
                 , Data.Org.Instances
                 , Data.Post
                 , Data.Post.TH
                 , Data.Text.Lift
  build-depends: base >=4.7 && <5
               , bytestring >=0.10 && <0.11
               , containers >=0.6 && <0.7
               , file-embed >= 0.0 && <0.1
               , gitrev >1.3 && <1.4
               , lucid >=2.9.11 && <3
               , mtl >=2.2 && <2.3
               , org-mode >=1.1 && <1.2
               , org-mode-lucid >=1.3 && <1.4
               , servant-lucid >=0.9 && <0.10
               , servant-server >=0.17 && <0.18
               , template-haskell >=2.14 && < 2.15
               , text >=1.2 && <1.3
               , time >=1.9 && <2

executable refl-club
  main-is: Main.hs
  other-modules: Paths_refl_club
  hs-source-dirs: gcp
  ghc-options: -threaded -rtsopts -O2 -static -with-rtsopts=-N -optl-pthread -optl-static
  cc-options: -static
  build-depends: base >=4.7 && <5
               , refl-club
               , servant-server >=0.17 && <0.18
               , warp >3.3 && <3.4
  default-language: Haskell2010
