name:           refl-club
version:        0.0.1.0
description:    Personal website
homepage:       https://github.com/jsoo1/refl.club#readme
bug-reports:    https://github.com/jsoo1/refl.club/issues
author:         John Soo <jsoo1@asu.edu>
copyright:      2020 John Soo
license:        GPL-3
license-file:   COPYING
extra-source-files: posts/*.org
                  , john-soo.asc
                  , john-soo-resume.pdf
                  , refl.css
                  , iosevka-regular.woff
                  , .git/HEAD
                  , .git/refs/heads/master
build-type:     Simple
cabal-version:  >= 2.0
tested-with: GHC == 8.6.5

source-repository head
  type: git
  location: https://github.com/jsoo1/refl.club

library
  other-modules: Paths_refl_club
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: About
                 , AllPosts
                 , Club
                 , Club.Git
                 , Club.Html
                 , Post
                 , Data.Org.Instances
                 , Data.Post
                 , Data.Post.TH
                 , Data.Text.Lift
                 , Embed.Text
                 , Servant.CSS
                 , Servant.PDF
                 , Servant.PgpKey
                 , Servant.Woff
                 , Servant.Seo.Orphans
  build-depends: base >=4.7 && <5
               , bifunctors >=5.5 && <5.6
               , bytestring >=0.10 && <0.11
               , containers >=0.6 && <0.7
               , exceptions >=0.10 && <0.11
               , feed >=1.2 && <1.4
               , feed-xmlbf ==0.0.1.*
               , file-embed >= 0.0 && <0.1
               , lucid >=2.9.11 && <3
               , modern-uri >=0.3 && <0.4
               , mtl >=2.2 && <2.3
               , http-media >=0.8 && <0.9
               , org-mode >=1.1 && <1.2
               , org-mode-lucid >=1.3 && <1.4
               , servant-feed ==0.0.1.*
               , servant-lucid >=0.9 && <0.10
               , servant-seo >= 0.1 && < 0.2
               , servant-server >=0.17 && <0.18
               , template-haskell >=2.14 && < 2.15
               , text >=1.2 && <1.3
               , time >=1.9 && <2

executable refl-club
  main-is: Main.hs
  other-modules: Paths_refl_club
  hs-source-dirs: gcp
  ghc-options: -threaded -rtsopts -O2 -static -with-rtsopts=-N -optl-pthread -optl-static
  cc-options: -static
  build-depends: base >=4.7 && <5
               , feed-xmlbf ==0.0.1.*
               , refl-club
               , servant-seo >= 0.1 && < 0.2
               , servant-server >=0.17 && <0.18
               , warp >3.3 && <3.4
  default-language: Haskell2010
