name:           refl-club
version:        0.0.1.0
description:    Personal website
homepage:       https://github.com/jsoo1/refl.club#readme
bug-reports:    https://github.com/jsoo1/refl.club/issues
author:         John Soo <jsoo1@asu.edu>
copyright:      2020 John Soo
license:        GPL-3
license-file:   COPYING
extra-source-files: posts/*.org
                  , john-soo.asc
                  , john-soo-resume.pdf
                  , refl.css
                  , iosevka-regular.woff
                  , .git/HEAD
build-type:     Simple
cabal-version:  >= 2.0
tested-with: GHC == 9.2.8

source-repository head
  type: git
  location: https://github.com/jsoo1/refl.club

library
  other-modules: Paths_refl_club
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: About
                 , AllPosts
                 , Club
                 , Club.Git
                 , Club.Html
                 , Post
                 , Data.Post
                 , Data.Post.TH
                 , Embed.Text
                 , Servant.CSS
                 , Servant.PDF
                 , Servant.PgpKey
                 , Servant.Woff
                 , Servant.Seo.Orphans
  build-depends: base
               , bifunctors
               , bytestring
               , containers
               , exceptions
               , feed
               , feed-xmlbf
               , file-embed
               , lucid
               , modern-uri
               , mtl
               , http-media
               , org-mode
               , org-mode-lucid
               , servant-feed
               , servant-lucid
               , servant-seo
               , servant-server
               , template-haskell
               , text
               , time

executable refl-club
  main-is: Main.hs
  other-modules: Paths_refl_club
  hs-source-dirs: gcp
  ghc-options: -threaded -rtsopts -O2 -static -with-rtsopts=-N -optl-pthread
  build-depends: base
               , feed-xmlbf
               , refl-club
               , servant-seo
               , servant-server
               , warp
  default-language: Haskell2010
